# artintellica

./: README.md  chat.md  pyproject.toml  requirements.txt
bun/: package.json
bun/www-artintellica-com/: Dockerfile  README.md  build-blog.ts  fly.toml  package.json  vite.config.ts
py/blog-0002/: scaling.py
py/blog-0002-scaling-laws/: requirements.txt  scaling.py
py/blog-0003-calc-01-limits/: demo_ed.py  demo_limits.py  ex_1.py  ex_2.py  ex_3.py
py/blog-0004-calc-02-derivatives/: compare_finite_vs_autograd.py  ex_1.py  ex_2.py  ex_3.py  slope_field.py
py/blog-0005-calc-03-fundamental-theorem/: ex_1.py  ex_2.py  ex_3.py  ftc_autograd.py  normal_area.py  requirements.txt
py/blog-0006-calc-04-gradient-descent/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  gradient_descent_1d.py  gradient_descent_1d_2.py
py/blog-0007-calc-05-taylor-series/: animate_exp.py  ex_1.py  ex_2.py  ex_3.py  ex_4.py  taylor_error_exp.py
py/blog-0008-calc-06-vector-functions/: autograd_xy2.py  ex_1.py  ex_2.py  ex_3.py  ex_4.py  link_to_backprop.py  quiver_xy2.py
py/blog-0009-calc-07-jacobian-hessian/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  mlp_hessian_spectrum.py  mlp_jacobian.py
py/blog-0010-calc-08-multiple-integrals/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  mc_gauss_2d.py  requirements.txt
py/blog-0011-calc-09-change-of-variables/: affine_flow.py  ex_1.py  ex_2.py  ex_3.py  ex_4.py
py/blog-0012-calc-10-line-and-surface-integrals/: ex_1.py  ex_2.py  ex_3.py  ex_4.py  streamplot_grad.py  work_circle.py
py/blog-0014-calc-12-odes/: ex_1.py  ex_2.py  (+5 more)
ts/: package.json  pnpm-lock.yaml
(+940 files in other folders)
